--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-on: workflow_dispatch
+on: [push, workflow-dispatch]
 
 jobs:
   mirror:
@@ -10,3 +10,4 @@ jobs:
         uses: amadigan/github-mirror@main
         with:
           origin: 'git://git.kernel.org/pub/scm/fs/ext2/e2fsprogs.git'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
