--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
         - __mirror
   schedule:
-    - cron: '5 * * * *'
+    - cron: '*/15 * * * *'
   workflow_dispatch:
 
 jobs:
